--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html style="height: 100%">
 <head>
   <meta charset="utf-8">
   <title>Archwizarddemo</title>
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="height: 100%; margin: 0">
   <app-root>Loading...</app-root>
 </body>
 </html>
