- updated build to the ng2-archwizard version 1.5.0 demo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html style="height: 100%">
 <head>
   <meta charset="utf-8">
   <title>Archwizarddemo</title>
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="styles.8da2364522e0749f90c2.bundle.css" rel="stylesheet"/></head>
-<body>
+<body style="height: 100%; margin: 0">
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.ba7c51e7a2f447639cb0.bundle.js"></script><script type="text/javascript" src="polyfills.a261e4d8ce5035cf59d6.bundle.js"></script><script type="text/javascript" src="vendor.b8aeb5c82b14758e2cac.bundle.js"></script><script type="text/javascript" src="main.74e7861f47f8b0c0baf2.bundle.js"></script></body>
+<script type="text/javascript" src="inline.32cd194ccc7224e0c0e3.bundle.js"></script><script type="text/javascript" src="polyfills.a3b82909b3e66fa4d849.bundle.js"></script><script type="text/javascript" src="vendor.dd710fa31792ab995155.bundle.js"></script><script type="text/javascript" src="main.72aca869c28af5b1f06e.bundle.js"></script></body>
 </html>
