--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html style="height: 100%">
+<html lang="en" style="height: 100%">
 <head>
   <meta charset="utf-8">
-  <title>Archwizarddemo</title>
+  <title>ArchwizardDemo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body style="height: 100%; margin: 0">
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 </html>
