- update to current version of the demo

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html style="height: 100%">
+<html lang="en" style="height: 100%">
 <head>
   <meta charset="utf-8">
-  <title>Archwizarddemo</title>
-  <base href="/ng2-archwizard-demo/">
+  <title>ArchwizardDemo</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.8da2364522e0749f90c2.bundle.css" rel="stylesheet"/></head>
+<link href="styles.d19376ec6447c7a76ddb.bundle.css" rel="stylesheet"/></head>
 <body style="height: 100%; margin: 0">
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.d8a69f73d902d6d7c741.bundle.js"></script><script type="text/javascript" src="polyfills.a3b82909b3e66fa4d849.bundle.js"></script><script type="text/javascript" src="vendor.92a9dbaa1ffbf78b0eb0.bundle.js"></script><script type="text/javascript" src="main.974f604136184aa4f69f.bundle.js"></script></body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.837b1255208dbec717f1.bundle.js"></script><script type="text/javascript" src="polyfills.859f19db95d9582e19d4.bundle.js"></script><script type="text/javascript" src="vendor.a6ae425b3640b955b17d.bundle.js"></script><script type="text/javascript" src="main.4f4103b39a2e7d03b58f.bundle.js"></script></body>
 </html>
