--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en" style="height: 100%">
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ArchwizardDemo</title>
+  <title>ng2-archwizard demo</title>
   <base href="/ng2-archwizard-demo/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="styles.d19376ec6447c7a76ddb.bundle.css" rel="stylesheet"/></head>
-<body style="height: 100%; margin: 0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="styles.61ba4f3eb76b7ffd301a.bundle.css" rel="stylesheet"/></head>
+<body>
   <app-root></app-root>
-<script type="text/javascript" src="inline.837b1255208dbec717f1.bundle.js"></script><script type="text/javascript" src="polyfills.859f19db95d9582e19d4.bundle.js"></script><script type="text/javascript" src="vendor.a6ae425b3640b955b17d.bundle.js"></script><script type="text/javascript" src="main.4f4103b39a2e7d03b58f.bundle.js"></script></body>
+<script type="text/javascript" src="inline.08e250a72222e7de5ab3.bundle.js"></script><script type="text/javascript" src="polyfills.d2d33dea92a6eba80951.bundle.js"></script><script type="text/javascript" src="scripts.d11fef34ae0d621eb458.bundle.js"></script><script type="text/javascript" src="vendor.b3e070b71437ad447441.bundle.js"></script><script type="text/javascript" src="main.92b5813683c174fc6a36.bundle.js"></script></body>
 </html>
