- update demo to newest version

--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>ng2-archwizard demo</title>
-  <base href="/ng2-archwizard-demo/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="styles.61ba4f3eb76b7ffd301a.bundle.css" rel="stylesheet"/></head>
-<body>
-  <app-root></app-root>
-<script type="text/javascript" src="inline.50e63b50c72ed2ee996e.bundle.js"></script><script type="text/javascript" src="polyfills.d2d33dea92a6eba80951.bundle.js"></script><script type="text/javascript" src="scripts.d11fef34ae0d621eb458.bundle.js"></script><script type="text/javascript" src="vendor.b3e070b71437ad447441.bundle.js"></script><script type="text/javascript" src="main.9e15c0e92b87d5db170c.bundle.js"></script></body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>ng2-archwizard demo</title><base href="/ng2-archwizard-demo/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="styles.61ba4f3eb76b7ffd301a.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.59c5ba069e3d2789d667.bundle.js"></script><script type="text/javascript" src="polyfills.cdb4a6579ec11a737431.bundle.js"></script><script type="text/javascript" src="scripts.011ba6e43e0ab2fd565f.bundle.js"></script><script type="text/javascript" src="vendor.6360126afb9bd0af84e6.bundle.js"></script><script type="text/javascript" src="main.afab952ab412f37c9caa.bundle.js"></script></body></html>
