--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>angular-archwizard demo</title><base href="/angular-archwizard-demo/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link href="styles.fd3c376e8662495d63a8.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.5ab809c684ea99425809.bundle.js"></script><script type="text/javascript" src="scripts.ba447b7e96f363c7f159.bundle.js"></script><script type="text/javascript" src="main.cca77d079114136413b7.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>angular-archwizard demo</title>
+  <base href="/angular-archwizard-demo/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.7b24599f6ed3f681a3cb.css"></head>
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.a5dd35324ddfd942bef1.js"></script><script type="text/javascript" src="polyfills.b17866176702565f77f4.js"></script><script type="text/javascript" src="scripts.759f0d9b33df76f48d97.js"></script><script type="text/javascript" src="main.773b144a5f8e582452a3.js"></script></body>
+</html>
