--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.1b856efda98a3ad05a5c.css"></head>
+<link rel="stylesheet" href="styles.1685caf8674e19061b1a.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="polyfills.79f793502445bab51074.js"></script><script type="text/javascript" src="scripts.4ee1381a8798b419cc99.js"></script><script type="text/javascript" src="main.8a66ba95b90330a85ee0.js"></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.34c8e13e88fc455bfc2e.js" nomodule defer></script><script src="polyfills-es2015.c2a2f693608fcf94cefa.js" type="module"></script><script src="scripts.94daaf13d368bb7298fd.js" defer></script><script src="main-es2015.e34ed7792797cc38bdd7.js" type="module"></script><script src="main-es5.e34ed7792797cc38bdd7.js" nomodule defer></script></body>
 </html>
