--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>angular-archwizard demo</title>
   <base href="/angular-archwizard-demo/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://buttons.github.io/buttons.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.1685caf8674e19061b1a.css"></head>
+<link rel="stylesheet" href="styles.fb3f50074ab1733c11b8.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.34c8e13e88fc455bfc2e.js" nomodule defer></script><script src="polyfills-es2015.c2a2f693608fcf94cefa.js" type="module"></script><script src="scripts.94daaf13d368bb7298fd.js" defer></script><script src="main-es2015.e34ed7792797cc38bdd7.js" type="module"></script><script src="main-es5.e34ed7792797cc38bdd7.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.137ff6a53b4b06c4dff2.js" nomodule defer></script><script src="polyfills-es2015.e41182b37d0daf303ac1.js" type="module"></script><script src="scripts.313bc4d6494e8b55be31.js" defer></script><script src="main-es2015.27efd0936155db9731b1.js" type="module"></script><script src="main-es5.27efd0936155db9731b1.js" nomodule defer></script></body>
 </html>
