--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8">
   <title>angular-archwizard demo</title>
   <base href="/angular-archwizard-demo/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://buttons.github.io/buttons.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="styles.fb3f50074ab1733c11b8.css"></head>
+  <style type="text/css">@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v77/flUhRq6tzZclQEJ-Vdg-IuiaDsNa.woff) format('woff');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;font-feature-settings:'liga';}@font-face{font-family:'Material Icons';font-style:normal;font-weight:400;src:url(https://fonts.gstatic.com/s/materialicons/v77/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2');}.material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;letter-spacing:normal;text-transform:none;display:inline-block;white-space:nowrap;word-wrap:normal;direction:ltr;-webkit-font-feature-settings:'liga';-webkit-font-smoothing:antialiased;}</style>
+<link rel="stylesheet" href="styles.02ba55864602254cc8b8.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.137ff6a53b4b06c4dff2.js" nomodule defer></script><script src="polyfills-es2015.e41182b37d0daf303ac1.js" type="module"></script><script src="scripts.313bc4d6494e8b55be31.js" defer></script><script src="main-es2015.27efd0936155db9731b1.js" type="module"></script><script src="main-es5.27efd0936155db9731b1.js" nomodule defer></script></body>
+<script src="runtime-es2015.a4dadbc03350107420a4.js" type="module"></script><script src="runtime-es5.a4dadbc03350107420a4.js" nomodule="" defer=""></script><script src="polyfills-es5.fe22f73306971870cc16.js" nomodule="" defer=""></script><script src="polyfills-es2015.c131ee7c37c2ac42bd19.js" type="module"></script><script src="scripts.f8491fbba5e8b4b079d8.js" defer=""></script><script src="main-es2015.f86d8ec82bf94d44cbe7.js" type="module"></script><script src="main-es5.f86d8ec82bf94d44cbe7.js" nomodule="" defer=""></script></body>
 </html>
